--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension DBI::Simple.
 
-0.01  Fri Jan  3 15:25:54 2003
+0.11  Sat Jan 4 9:04:26 2003
+	- revised errors in documentation
+	- moved all data members of recordset to an internal hash
+
+0.1  Fri Jan  3 15:25:54 2003
 	- original version; created by h2xs 1.22 with options
 		-n DBI::Simple -X
-
